--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<img src="images/gfxrip.png">
 					</section>
 					<section>
-						<h4>Bitplanes 4bpls</h4>
+						<h4>5 Bitplanes</h4>
 						<img src="images/gfxrip-4bpls.png">
 					</section>
 				</section>
@@ -196,7 +196,7 @@ FB 00 01 01 02 FC 03
 								<th>Address</th><th>D1</th><th>D2</th><th>D3</th><th>D4</th><th>D5</th><th>D6</th><th>D7</th><th>D8</th>
 							</tr>
 							<tr>
-								<td>0x10c</td><td>FF</td>00<td>00</td><td>00</td><td>00</td><td>16</td><td>E5</td><td>FF</td><td>FF</td>
+								<td>0x10c</td><td>FF</td><td>00</td><td>00</td><td>00</td><td>16</td><td>E5</td><td>FF</td><td>FF</td>
 							</tr>
 						</table>
 						<p>
@@ -214,6 +214,14 @@ FB 00 01 01 02 FC 03
 								<figcaption><small class="vsmall">Source: http://4.bp.blogspot.com/-gDbKzI80lhw/Vg0F-w6QcUI/AAAAAAAABF4/hfAwVy9Gu04/s640/PiAxes.jpg</small></figcaption>
 						</figure>
 					</section>
+					<section>
+						<ul>
+							<li>Tons of different sensors available</li>
+							<li>Varying features. Some provide completely free 3D movements (expressed in DOF - Degrees of Freedom)</li>
+							<li>Originally started with Bosch bnO055 (enterprise grade 9 DOF sensor)</li>
+							<li>Ended up using a MPU6050 based solution (6 DOF)</li>
+						</ul>
+					</section>
 				</section>
 				<section>
 					<section><h2>Hardware Tooling</h2></section>
@@ -227,6 +235,7 @@ FB 00 01 01 02 FC 03
 				<section>
 					<h4>Thanks!</h4>
 					<ul>
+						<li><a href="https://soundcloud.com/subdream">https://soundcloud.com/subdream</a></li>
 						<li><a href="http://www.pouet.net/prod.php?which=69676">http://www.pouet.net/prod.php?which=69676</a></li>
 						<li><a href="https://github.com/m0ppers/wirklichkeitssteuerungsgeraet">https://github.com/m0ppers/wirklichkeitssteuerungsgeraet</a></li>
 						<li><a href="https://www.reaktor.com/blog/crash-course-to-amiga-assembly-programming/">https://www.reaktor.com/blog/crash-course-to-amiga-assembly-programming/</a></li>
