--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@ FB 00 01 01 02 FC 03
 				</section>
 				<section>
 					<section>
-						<h2>Amiga Tooling</h2>
+						<h2>Tooling for Amiga development</h2>
 					</section>
 					<section>
 						<ul>
 							<li><a href="http://aminet.net/package/dev/asm/ira">http://aminet.net/package/dev/asm/ira</a></li>
 							<li><a href="http://sun.hasenbraten.de/vasm/">http://sun.hasenbraten.de/vasm/</a></li>
-							<li><a href="http://www.winuae.net/">http://www.winuae.net/</a></li>
+							<li><a href="http://www.winuae.net/">http://www.winuae.net/</a> - there are also other UAE variants for all sorts of OSes</li>
+							<li>Transparent file system access only available on windows. So that is the platform of choice (for my workflow)</li>
 						</ul>				
 					</section>
 				</section>
@@ -232,6 +233,18 @@ FB 00 01 01 02 FC 03
 						</ul>
 					</section>
 				</section>
+				<section>
+					<h2>3D Printing</h2>
+					<ul>
+						<li>STL seems to be the format of choice</li>
+						<li><a href="https://www.thingiverse.com">thingiverse.com</a> is awesome!</li>
+						<li><a href="https://www.3dhubs.com">3dhubs</a> is awesome!</li>
+						<li>Stadtbibliothek Köln is offering 3d printing for free!</li>
+						<li>Different apps to create 3D models. Finally decided on <a href="https://openscad.org">OpenSCAD</a></li>
+						<li>Separate project: <a href="https://github.com/m0ppers/brumm-case">brumm-case</a></li>
+					</ul>
+				</section>
+
 				<section>
 					<h4>Thanks!</h4>
 					<ul>
